# super-rapper

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  LICENSE  README.md  mypy.ini  pyproject.toml
src/super_rapper/: __init__.py  super_rapper.py
tests/: test_super_rapper.py
