[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "super-rapper"
version = "0.1.0"
description = "Library for creating demo sound sources with method chain"
authors = [
    {name = "Kazukichi",email = "kazukiti201@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.poetry]
packages = [{ include = "super_rapper", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ruff = "^0.11.6"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
